--- a/Estudio/Estudio.csproj
+++ b/Estudio/Estudio.csproj
@@ -51,6 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aluno.cs" />
+    <Compile Include="ConsultarTurma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsultarTurma.Designer.cs">
+      <DependentUpon>ConsultarTurma.cs</DependentUpon>
+    </Compile>
     <Compile Include="DAO_Conexao.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -110,6 +116,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Turma.cs" />
+    <EmbeddedResource Include="ConsultarTurma.resx">
+      <DependentUpon>ConsultarTurma.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
