--- a/Estudio/Estudio.csproj
+++ b/Estudio/Estudio.csproj
@@ -60,6 +60,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aluno.cs" />
+    <Compile Include="CadastroMatricula.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroMatricula.Designer.cs">
+      <DependentUpon>CadastroMatricula.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ConsultarMatricula.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsultarMatricula.Designer.cs">
+      <DependentUpon>ConsultarMatricula.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConsultarTurma.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,16 +127,29 @@
     <Compile Include="Form8.Designer.cs">
       <DependentUpon>Form8.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form9.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form9.Designer.cs">
+      <DependentUpon>Form9.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormExcluir.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormExcluir.Designer.cs">
       <DependentUpon>FormExcluir.cs</DependentUpon>
     </Compile>
+    <Compile Include="Matricula.cs" />
     <Compile Include="Modalidade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Turma.cs" />
+    <EmbeddedResource Include="CadastroMatricula.resx">
+      <DependentUpon>CadastroMatricula.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConsultarMatricula.resx">
+      <DependentUpon>ConsultarMatricula.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ConsultarTurma.resx">
       <DependentUpon>ConsultarTurma.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +176,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form8.resx">
       <DependentUpon>Form8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form9.resx">
+      <DependentUpon>Form9.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormExcluir.resx">
       <DependentUpon>FormExcluir.cs</DependentUpon>
